add register page and new css styles

--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -1,26 +1,14 @@
 body {
   background-color: #f0f0ff;
-  position: relative;
+  margin: 0;
+  padding: 0;
   font-family: "Sofia Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-size: 20px;
 }
-footer {
-  background-color: #333;
-  color: hsl(0, 0%, 99%);
-  text-align: center;
-  padding: 0;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
+
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
   color: #fff;
   padding: 10px 30px;
   text-align: center;
@@ -29,40 +17,39 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+}
+header div {
+  display: flex;
+  align-items: center;
 }
 header div img {
   height: 50px;
   width: 50px;
   /* margin-right: 20px; */
 }
-header div:last-child {
-  margin-right: 60px;
-}
 header div a {
+  margin-right: 70px;
   font-size: 20px;
   color: white;
   text-decoration: none;
-}
-header div {
   transition: transform 0.3s ease;
-}
-header div:hover {
-  transform: scale(1.1);
 }
 header div a:hover {
   color: #0d5fa9;
+  transform: scale(1.1);
 }
 
-main {
-  max-width: 1440px;
-  margin: 100px auto;
-  padding: 0 30px;
-}
-
-.charact {
-  font-weight: bold;
-}
-main img {
-  width: 800px;
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
