--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -14,13 +14,16 @@ header {
   text-align: center;
   background-color: black;
   color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+}
+.nav {
+  max-width: 1440px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 header div {
   display: flex;
