--- a/css/video_page.css
+++ b/css/video_page.css
@@ -1,3 +1,7 @@
+h1 {
+  margin-top: 100px;
+  text-align: center;
+}
 .video-container {
   text-align: center;
   margin-bottom: 20px;
@@ -6,7 +10,10 @@ h2 {
   color: black;
 }
 main {
-  margin: 50px auto;
+  margin: 30px 50px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 img {
   transition: transform 0.3s ease;
