--- a/css/calendar.css
+++ b/css/calendar.css
@@ -12,9 +12,15 @@ main {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 10px 30px 30px;
+  position: relative;
+  background-color: #fdfdfd;
+  z-index: 1;
 }
 table {
   margin-bottom: 20px;
+}
+td:last-child {
+  text-align: right;
 }
 .event a {
   margin-left: 30px;
@@ -30,4 +36,77 @@ table {
 }
 .event a:hover {
   background-color: #8a8a8a5b;
+}
+.event1 img {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+}
+.event2 img {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+}
+.event3 img {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.modal-overlay1,
+.modal-overlay2,
+.modal-overlay3 {
+  z-index: 2;
+  display: none;
+  position: fixed;
+  /* position: absolute; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.267);
+}
+.modal1,
+.modal2,
+.modal3 {
+  display: none;
+  z-index: 3;
+}
+#modal {
+  width: 700px;
+  height: 500px;
+  background-color: #fdfdfd;
+  /* position: absolute;
+  top: 80px;
+  left: 25%; */
+  border-radius: 5px;
+  box-shadow: 4px 4px 2px rgba(0, 0, 0, 0.5);
+  padding-top: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow-y: auto;
+  z-index: 3;
+}
+.modal-close {
+  cursor: pointer;
+  font-size: 40px;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+#modal p {
+  width: 600px;
+  padding-left: 20px;
+  margin-bottom: 5px;
+}
+#modal ul {
+  margin-top: 5px;
+  margin-left: 50px;
+  padding-top: 5px;
+  width: 600px;
 }
