--- a/css/form.css
+++ b/css/form.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 800px;
   margin: 100px auto;
-  padding: 20px;
+  padding: 20px 20px 50px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,6 +19,7 @@ form {
 }
 input[type="text"],
 input[type="email"],
+input[type="password"],
 textarea {
   width: 100%;
   padding: 10px;
