--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f0f0ff;
-  margin: 0 0;
+  margin: 0 auto;
   font-family: "Sofia Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -10,9 +10,6 @@ body {
 header {
   background-color: #131212;
   padding: 10px;
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center; */
   position: fixed;
   top: 0;
   left: 0;
@@ -20,10 +17,6 @@ header {
 }
 .logo img {
   border-radius: 10px;
-  /* text-align: center; */
-}
-nav {
-  /* margin-top: 20px; */
 }
 nav ul {
   list-style-type: none;
@@ -44,6 +37,7 @@ nav ul li:hover {
 
 .navigation {
   max-width: 1440px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -59,14 +53,97 @@ nav ul li:hover {
   text-decoration: none;
 }
 main {
-  margin: 120px 0;
+  margin: 120px auto;
+  max-width: 1440px;
 }
+.baner-1 {
+  position: fixed;
+  left: 10px;
+}
+.baner-2 {
+  position: fixed;
+  top: 120px;
+  right: 10px;
+}
+.baner-2 img,
+.baner-1 img {
+  border-radius: 10px;
+  width: 300px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.baner2-title {
+  position: fixed;
+  top: 120px;
+  z-index: 1;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px 10px 0 0;
+}
+.baner1-title {
+  position: fixed;
+  top: 120px;
+  z-index: 1;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0.5410539215686274) 58%,
+    rgba(0, 0, 0, 0.11528361344537819) 100%
+  );
+  border-radius: 10px 10px 0 0;
+}
+.baner2-title h2 {
+  color: black;
+  font-size: 32px;
+  margin: 16px;
+}
+.baner1-title h2 {
+  color: white;
+  font-size: 32px;
+  margin: 16px;
+}
+.baner2-title p {
+  margin: 16px;
+  color: black;
+}
+.baner1-title p {
+  margin: 16px;
+  color: white;
+}
+.baner1-button a,
+.baner2-button a {
+  background-color: #0d5fa9;
+  color: #fff;
+  position: fixed;
+  top: 520px;
+  z-index: 1;
+  width: 220px;
+  height: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin-left: 40px;
+  transition: transform 0.3s ease;
+}
+.baner1-button a:hover,
+.baner2-button a:hover {
+  background-color: rgb(29, 28, 28);
+  transform: scale(1.05);
+}
+
 section {
   padding: 20px;
   margin: 20px auto;
   background-color: #fff;
   /* Білий фон для розділів замітка*/
-  max-width: 800px;
+  max-width: 600px;
   border-radius: 10px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
